--- a/mod.settings
+++ b/mod.settings
@@ -5,8 +5,7 @@ description = [=[ModID: 4292cdec
 
 A colleciton of the NS2 community fixes that are waiting to be pulled in to the next build (or are going to be on the github soon). Server operators can subscribe to this mod to get fixes sooner.
 
-
-]=]
+See here for details: https://github.com/TheRealNin/ns2-community-fixes]=]
 image       = "preview.jpg"
 tag_modtype = "Gameplay Tweak"
 tag_support = "Must be run on Server"
